Fixed some media queries for navbar so buttons arent squished

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -113,7 +113,26 @@
 }
 
 /* Media Queries for Navigation Menu */
-@media screen and (max-width: 550px) {
+@media screen and (max-width: 680px) {
+  navigation-menu {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: white;
+    border-top: 1px solid black;
+    display: none;
+    z-index: 999; /* Ensure the navigation menu appears above other elements */
+  }
+
+  .navigation-menu.expanded {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+  
   .hamburger {
     display: block;
   }
